[FIX] MonthDay width on IE.

--- a/src/components/atoms/month_day/MonthDay.module.css
+++ b/src/components/atoms/month_day/MonthDay.module.css
@@ -1,5 +1,6 @@
 .container {
-	flex: 1 0 14.285%;
+	box-sizing: border-box;
+	flex: 1 0 12%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
