--- a/src/components/organisms/reservation_card/ReservationCard.module.css
+++ b/src/components/organisms/reservation_card/ReservationCard.module.css
@@ -4,7 +4,7 @@
   border: 2px solid #CECECE;
   min-height: 20rem;
   width: 100%;
-  min-width: 325px;
+  min-width: 330px;
   padding: 1.6rem .4rem;
   border-radius: 1px;
 }
@@ -48,7 +48,7 @@
     width: 98%;
   }
 }
-@media (min-width: 481px) {
+@media (min-width: 400px) {
   .card {
     width: auto;
     min-width: 25rem;
